# interprocess-cpp-boilerplate

./: .gitignore  CMakeLists.txt  README.md
include/: ClInterprocBase.hpp  ClInterprocClient.hpp  ClInterprocListener.hpp  ClInterprocMsgManager.hpp  ClInterprocMsgQueue.hpp  InterprocError.hpp
src/: ClInterprocBase.cpp  ClInterprocClient.cpp  ClInterprocListener.cpp  ClInterprocMsgManager.cpp  ClInterprocMsgQueue.cpp  main.cpp
